...
        android:gravity="start"
        app:layout_constrainedHeight="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meeting_title">

        <EditText
          android:id="@+id/start_date_edit_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="false"
          android:hint="@string/start_date_required"
          android:autofillHints="false" />

        <EditText
          android:id="@+id/end_date_edit_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:autofillHints="false"
          android:focusableInTouchMode="false"
          android:hint="@string/end_date_optional" />

...
        android:gravity="start"
        app:layout_constrainedHeight="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date">

        <EditText
          android:id="@+id/start_time_edit_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="false"
          android:hint="@string/start_time_required"
          android:autofillHints="false" />

        <EditText
          android:id="@+id/end_time_edit_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="false"
          android:hint="@string/end_time_optional"
          android:autofillHints="false" />

      </LinearLayout>


      <RadioGroup
...
