...
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="past_date_not_allowed">Event has to start/end today or in the future</string>
    <string name="end_date_after_start_date_not_allowed">End date has to be after or the same day as the start date
    </string>
    <string name="start_date_after_end_date_not_allowed">Start date must be before or the same day as end date</string>
    <string name="start_time_after_end_time_not_allowed">Start time must be before end time</string>
    <string name="end_time_before_start_time_not_allowed">End time must be after start time</string>
    <string name="end_time_optional">End Time</string>
    <string name="picker_selection">selection</string>
    <string name="past_events">Past Events</string>
    <string name="present_events">Present Events</string>
    <string name="future_events">Future Events</string>

...
    <string name="choices_title">Choices :</string>
    <string name="button_schedule">Schedule</string>
    <string name="delete_choice_button">-</string>
    <string name="choice_edit_text_hint">Choice…</string>

    <!-- Meeting Event -->
    <string name="meeting_event">Meeting Event</string>
    <string name="create_meeting_event">Create Meeting event</string>
    <string name="meeting_title_required">Meeting Title*</string>

    <!-- Roll-Call Event -->
    <string name="roll_call_event">Roll-Call Event</string>
    <string name="exception_message_empty_lao_name">Trying to set an empty name for the LAO</string>
...
