...
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
      android:id="@+id/add_future_event_button"
      android:layout_width="@dimen/margin_text"
      android:layout_height="@dimen/margin_text"
      android:focusable="false"
      android:src="@drawable/ic_baseline_add_24"
      android:visibility="@{isFutureCategory &amp;&amp; viewmodel.isOrganizer() ? View.VISIBLE : View.GONE}"
      android:onClick="@{() -> addEventListener.addEvent()}"
...
