<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/fragment_organizer"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <!-- TODO: DELETE
  <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideline_horizontal_tab"
          android:layout_width="match_parent"
...
